# multi_robots

./: CMakeLists.txt  README.md  READMEmap  coopMap.txt  map.txt  ost.yaml  package.xml  package.xml~  simMap.txt
Arduino/HelloWorldROS/: HelloWorldROS.ino
Arduino/checkMotors/: checkMotors.ino
Arduino/codigo_protocolo_motor/: codigo_protocolo_motor.ino
Arduino/petitControl/: petitControl.ino
Arduino/recivingFromPython/: recivingFromPython.ino
Arduino/timerExample/: timerExample.ino
GPSconfig/: README  map.txt  map.txt~  objects.txt  objects.txt~
launch/: cam_track.launch  camtrack.launch  camtrack.launch~  coop.launch  multi_robots.launch  sim.launch  test.launch  test.launch~
maps/: README.txt  map.txt
msg/: GPSinfo.msg  Robot.msg  Robot.msg~  RobotPose.msg
others/: .~lock.calibX.ods#  .~lock.velLinear_To_PWM.ods#  XbeeCoordinatorConfig.xml  XbeeEndDeviceConfig.xml  archBasic.dia  architecture.dia  architecture.dia.autosave  calibX.ods  rectif  rosgraph.dot  simpleArc.dia  tableDiagram.dia  tableDiagram.dia~  testCom.txt  velLinear_To_PWM.ods
others/simulations/: pointModel.m  unicycleModel.m~
robotGeometry/: Border.txt  README  README~  border.txt  border.txt~  buildRectangle.py  buildRectangle.py~  default.txt  default.txt~  frontier.txt~  logiTechBox.txt  robot1.txt  thimioRobot.txt
scripts/: corrector.py  gps.py  sender.py  sim_particle.py  sim_unicycle.py  simulator.py  test.py  trajectory_planer.py  trajectory_planner.py
