<?xml version="1.0"?>
<package>
  <name>multi_robots</name>
  <version>0.0.1</version>
  <description>The multi_robots package</description>

  <maintainer email="sergionicolas93@gmail.com">Sergio N. Rodriguez</maintainer>

  <license>MIT</license>


  <url type="github">http://github.com/sergionr2/multi_robots </url>

  <author email="sergionicolas93@gmail.com">Sergio N. Rodriguez</author>

  <build_depend>message_generation</build_depend> 
  <run_depend>message_runtime</run_depend> 
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>

  </export>
</package>
